Eliminação de chave de acesso da AWS
Eliminada as chaves de acesso da AWS:
aws_access_key_id: 
aws_secret_access_key:

--- a/mrjob.conf
+++ b/mrjob.conf
@@ -1,8 +1,8 @@
 
 runners:
  emr:
-  aws_access_key_id: AWSAccessKeyId=AKIAWZC5AD4MA3QS3W5B
-  aws_secret_access_key: AWSSecretKey=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
+  aws_access_key_id: CHAVE
+  aws_secret_access_key: CHAVE
   ec2_key_pair: dio-desfio-chave
   ec2_key_pair_file: ~/venv_diolive/dio-desfio-chave.pem
   region: us-west-2
