--- a/mrjob.conf
+++ b/mrjob.conf
@@ -4,7 +4,7 @@ runners:
   aws_access_key_id: CHAVE
   aws_secret_access_key: CHAVE
   ec2_key_pair: dio-desfio-chave
-  ec2_key_pair_file: ~/venv_diolive/dio-desfio-chave.pem
+  ec2_key_pair_file: ~/.ssh/dio-desfio-chave.pem
   region: us-west-2
   ssh_tunnel: true
   instance_type: m5.xlarge
